# MD-Editor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  about.html  index.html  package-lock.json  package.json  vite.config.js
src/: about.js  appUpdater.js  exportDocx.js  exportPdf.js  interfaceSettings.js  main.js  style.css  toc.js  toolbarLayout.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
