[package]
name = "md-editor"
version = "1.0.0"
edition = "2021"
description = "Markdown editor with live preview"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17.2"
